[package]
name = "tracing"
version = "0.2.0"
authors = ["Yoann Blein <yoann.blein@free.fr>"]

[features]
default = ["gui"]
gui = ["sdl2"]

[dependencies]
rand = "^0.4"
rayon = "^1"
time = "^0"
image = "^0"
serde = "^1"
serde_derive = "^1"
bincode = "^1"

sdl2 = { version = "^0", optional = true }

serde_json = "^1"

[profile.release]
#lto = true
#debug = true

[profile.dev]
opt-level = 2
